# jupyterhub-libcloudspawner

./: .gitignore  .project  .pydevproject  .readthedocs.yaml  AUTHORS  ChangeLog  MANIFEST  README.md  README.rst  jupyterhub_conf_example.py  jupyterhub_config.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  version.py
.github/workflows/: python-publish.yml
doc/source/: about.rst  conf.py  custom.rst  index.rst  install.rst
doc/source/api/: libcloudspawner.manager.rst  libcloudspawner.rst  libcloudspawner.tests.conf.rst  libcloudspawner.tests.libcloud.rst  libcloudspawner.tests.rst  modules.rst
docs/: configure.md  index.md  install.md  internal.md  prepare-cloud.md
docs/_static/: .$overview-schema1.drawio.dtmp  overview-schema1.drawio
docs/custom/: images.md  index.md
docs/use-cases/: simplevm-apptainer.md  ubuntu-local-vnc.md  ubuntu-local.md
libcloudspawner/: __init__.py  spawner.py
libcloudspawner/data/: example_userdata_from_scratch.yaml.j2  example_userdata_from_vanilla_cloudimage.yaml.j2  options_form.html.j2  userdata.sh.j2
libcloudspawner/manager/: errors.py  nodemanager.py
libcloudspawner/tests/: test_vapor.py
libcloudspawner/tests/conf/: spawner_conf.py  spawner_conf_ok.json
libcloudspawner/tests/libcloud/: vapor.py
manager/: nodemanager.py
noocloudspawner/: __init__.py  spawner.py
