[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "libcloudspawner"
dynamic = ["version"]
authors = [
  { name="Tristan Le Toullec", email="tristan.letoullec@cnrs.fr" },
]
description = "libcloudspawner: A Spawner for Jupyterhub which create user notebook inside cloud"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research"
]

[project.urls]
"Homepage" = "https://github.com/tristanlt/jupyter-libcloudspawner"
"Documentation" = "https://jupyter-libcloudspawner.readthedocs.io/en/latest/about.html"
"Bug Tracker" = "https://github.com/tristanlt/jupyter-libcloudspawner/issues"

[tool.hatch.version]
path = "libcloudspawner/__about__.py"