[metadata]
name = jupyter-libcloudspawner
author = Tristan Le Toullec
author-email = tristan.letoullec@cnrs.fr
summary = jupyter-libcloudspawner: A Spawner for Jupyterhub which create notebook inside OpenStack 
description-file = README.rst
home-page = https://github.com/tristanlt/jupyter-libcloudspawner
license = CeCILL-B
classifier =
    Environment :: JupyterHub
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python
    
keywords =
    jupyter
    sciences

[files]
packages =
    libcloudspawner

	
