[metadata]
name = libcloudspawner
author = Tristan Le Toullec
author-email = tristan.letoullec@cnrs.fr
summary = libcloudspawner: A Spawner for Jupyterhub which create user notebook inside cloud 
description-file = README.rst
home-page = https://github.com/tristanlt/jupyter-libcloudspawner
license = CeCILL-B
classifier =
    Environment :: JupyterHub
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python
    
keywords =
    jupyter
    sciences

[files]
packages =
    libcloudspawner

[extras]
dev =
    tox
    bunch
    nose
    jupyter
    coverage
    sphinx
    sphinx_rtd_theme
    
[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
	jupyterhub_conf_example.py
	jupyterhub_conf_noocloud.py
	tests/
autodoc_exclude_modules =
	jupyterhub_conf_example
	jupyterhub_conf_noocloud


[build_sphinx]
builders = html
source-dir = doc/source
build-dir = doc/build
all-files = 1
	
